Added patch and put for the account endpoint
